Prevent pull-down-to-refresh on mobile

--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,10 @@
 html, body {
     height: 100%;
     width: 100%;
+    position: fixed;
+    overflow: hidden;
     margin: 0;
+    overscroll-behavior: none;
 }
 
 body {
